[package]
name = "evolutionary-computing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
toml = "0.7.6"
serde = "1.0.136"
serde_derive = "1.0.183"
rayon = "1.7"
dyn-clone = "1.0.13"
plotters = "0.3.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
