[package]
name = "evolutionary"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
homepage = "https://github.com/IgorFroehner/evolutionary-computing"
readme = "README.md"
description = "Evolutionary Computing Algorithms in Rust"
repository = "https://github.com/IgorFroehner/evolutionary-computing"
keywords = ["framework", "genetic", "optimization", "evolutionary", "search"]
categories = ["algorithms", "science"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
toml = "0.7.6"
serde = "1.0.136"
serde_derive = "1.0.183"
rayon = "1.7"
dyn-clone = "1.0.13"
plotters = "0.3.5"
