[package]
name = "evolutionary"
version = "0.1.1"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
homepage = "https://github.com/IgorFroehner/evolutionary-computing"
readme = "README.md"
description = "A fully extensible Rust framework for using paralyzed genetic algorithms to solve problems. "
repository = "https://github.com/IgorFroehner/evolutionary-computing"
keywords = ["framework", "genetic", "optimization", "evolutionary", "search"]
categories = ["algorithms", "science"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
toml = "0.8.2"
serde = "1.0.136"
serde_derive = "1.0.183"
rayon = "1.7"
dyn-clone = "1.0.13"
plotters = "0.3.5"
ordered-float = { version = "4.2.0", default-features = false }
